--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,8 +107,24 @@ a {
   -ms-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
   -o-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
   font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-  margin-bottom: calc(2rem - 10.52px);
-  padding-top: 10.52px; }
+  margin-bottom: 1.45332rem;
+  padding-top: 0.54668rem; }
+  @media screen and (min-width: 40em) {
+    .typeset p {
+      margin-bottom: 1.41285rem;
+      padding-top: 0.58715rem; } }
+  @media screen and (min-width: 50em) {
+    .typeset p {
+      margin-bottom: 1.40799rem;
+      padding-top: 0.59201rem; } }
+  @media screen and (min-width: 64em) {
+    .typeset p {
+      margin-bottom: 1.39999rem;
+      padding-top: 0.60001rem; } }
+  @media screen and (min-width: 100em) {
+    .typeset p {
+      margin-bottom: 1.41555rem;
+      padding-top: 0.58445rem; } }
 .typeset h1, .typeset h2, .typeset h3, .typeset h4, .typeset h5, .typeset h6 {
   -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
   -moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
@@ -122,92 +138,169 @@ a {
 .typeset h1, .typeset .alpha {
   line-height: 3rem;
   font-size: 2.33333rem;
-  margin-bottom: calc(1rem - 8.5px);
-  padding-top: 8.5px; }
+  margin-bottom: 0.36332rem;
+  padding-top: 0.63668rem; }
   @media screen and (min-width: 40em) {
     .typeset h1, .typeset .alpha {
-      font-size: 2.14286rem; } }
+      font-size: 2.14286rem;
+      margin-bottom: 0.29285rem;
+      padding-top: 0.70715rem; } }
   @media screen and (min-width: 50em) {
     .typeset h1, .typeset .alpha {
-      font-size: 2.13333rem; } }
+      font-size: 2.13333rem;
+      margin-bottom: 0.28932rem;
+      padding-top: 0.71068rem; } }
   @media screen and (min-width: 64em) {
     .typeset h1, .typeset .alpha {
-      font-size: 2.35294rem; } }
+      font-size: 2.35294rem;
+      margin-bottom: 0.37058rem;
+      padding-top: 0.62942rem; } }
   @media screen and (min-width: 100em) {
     .typeset h1, .typeset .alpha {
-      font-size: 2.77778rem; } }
+      font-size: 2.77778rem;
+      margin-bottom: 0.52777rem;
+      padding-top: 0.47223rem; } }
 .typeset h2, .typeset .beta {
   line-height: 3rem;
   font-size: 2.08333rem;
-  margin-bottom: calc(1rem - 10.72px);
-  padding-top: 10.72px; }
+  margin-bottom: 0.27082rem;
+  padding-top: 0.72918rem; }
   @media screen and (min-width: 40em) {
     .typeset h2, .typeset .beta {
-      font-size: 1.9rem; } }
+      font-size: 1.9rem;
+      margin-bottom: 0.20299rem;
+      padding-top: 0.79701rem; } }
   @media screen and (min-width: 50em) {
     .typeset h2, .typeset .beta {
-      font-size: 1.87333rem; } }
+      font-size: 1.87333rem;
+      margin-bottom: 0.19312rem;
+      padding-top: 0.80688rem; } }
   @media screen and (min-width: 64em) {
     .typeset h2, .typeset .beta {
-      font-size: 2.08824rem; } }
+      font-size: 2.08824rem;
+      margin-bottom: 0.27264rem;
+      padding-top: 0.72736rem; } }
   @media screen and (min-width: 100em) {
     .typeset h2, .typeset .beta {
-      font-size: 2.43889rem; } }
+      font-size: 2.43889rem;
+      margin-bottom: 0.40238rem;
+      padding-top: 0.59762rem; } }
 .typeset h3, .typeset .gamma {
   line-height: 3rem;
   font-size: 1.86667rem;
-  margin-bottom: calc(1rem - 14.05px);
-  padding-top: 14.05px; }
+  margin-bottom: 0.19066rem;
+  padding-top: 0.80934rem; }
   @media screen and (min-width: 40em) {
     .typeset h3, .typeset .gamma {
-      font-size: 1.71429rem; } }
+      font-size: 1.71429rem;
+      margin-bottom: 0.13428rem;
+      padding-top: 0.86572rem; } }
   @media screen and (min-width: 50em) {
     .typeset h3, .typeset .gamma {
-      font-size: 1.70667rem; } }
+      font-size: 1.70667rem;
+      margin-bottom: 0.13146rem;
+      padding-top: 0.86854rem; } }
   @media screen and (min-width: 64em) {
     .typeset h3, .typeset .gamma {
-      font-size: 1.76471rem; } }
+      font-size: 1.76471rem;
+      margin-bottom: 0.15293rem;
+      padding-top: 0.84707rem; } }
   @media screen and (min-width: 100em) {
     .typeset h3, .typeset .gamma {
-      font-size: 1.96111rem; } }
+      font-size: 1.96111rem;
+      margin-bottom: 0.2256rem;
+      padding-top: 0.7744rem; } }
 .typeset h4, .typeset .delta {
   font-size: 1.66667rem;
-  margin-bottom: -6.53px;
-  padding-top: 6.53px; }
+  margin-bottom: -0.38334rem;
+  padding-top: 0.38334rem; }
   @media screen and (min-width: 40em) {
     .typeset h4, .typeset .delta {
-      font-size: 1.52143rem; } }
+      font-size: 1.52143rem;
+      margin-bottom: -0.43708rem;
+      padding-top: 0.43708rem; } }
   @media screen and (min-width: 50em) {
     .typeset h4, .typeset .delta {
-      font-size: 1.5rem; } }
+      font-size: 1.5rem;
+      margin-bottom: -0.44501rem;
+      padding-top: 0.44501rem; } }
   @media screen and (min-width: 64em) {
     .typeset h4, .typeset .delta {
-      font-size: 1.57059rem; } }
+      font-size: 1.57059rem;
+      margin-bottom: -0.41889rem;
+      padding-top: 0.41889rem; } }
   @media screen and (min-width: 100em) {
     .typeset h4, .typeset .delta {
-      font-size: 1.72778rem; } }
+      font-size: 1.72778rem;
+      margin-bottom: -0.36073rem;
+      padding-top: 0.36073rem; } }
 .typeset h5, .typeset .epsilon {
   font-size: 1.49167rem;
-  margin-bottom: -8.75px;
-  padding-top: 8.75px; }
+  margin-bottom: -0.44809rem;
+  padding-top: 0.44809rem; }
   @media screen and (min-width: 40em) {
     .typeset h5, .typeset .epsilon {
-      font-size: 1.37143rem; } }
+      font-size: 1.37143rem;
+      margin-bottom: -0.49258rem;
+      padding-top: 0.49258rem; } }
   @media screen and (min-width: 50em) {
     .typeset h5, .typeset .epsilon {
-      font-size: 1.36667rem; } }
+      font-size: 1.36667rem;
+      margin-bottom: -0.49434rem;
+      padding-top: 0.49434rem; } }
   @media screen and (min-width: 64em) {
     .typeset h5, .typeset .epsilon {
-      font-size: 1.32353rem; } }
+      font-size: 1.32353rem;
+      margin-bottom: -0.5103rem;
+      padding-top: 0.5103rem; } }
   @media screen and (min-width: 100em) {
     .typeset h5, .typeset .epsilon {
-      font-size: 1.38889rem; } }
+      font-size: 1.38889rem;
+      margin-bottom: -0.48612rem;
+      padding-top: 0.48612rem; } }
 .typeset h6, .typeset .zeta {
-  margin-bottom: -9.86px;
-  padding-top: 9.86px; }
+  font-size: 1.33333rem;
+  margin-bottom: -0.50668rem;
+  padding-top: 0.50668rem; }
+  @media screen and (min-width: 40em) {
+    .typeset h6, .typeset .zeta {
+      font-size: 1.21429rem;
+      margin-bottom: -0.55072rem;
+      padding-top: 0.55072rem; } }
+  @media screen and (min-width: 50em) {
+    .typeset h6, .typeset .zeta {
+      font-size: 1.2rem;
+      margin-bottom: -0.55601rem;
+      padding-top: 0.55601rem; } }
+  @media screen and (min-width: 64em) {
+    .typeset h6, .typeset .zeta {
+      font-size: 1.17647rem;
+      margin-bottom: -0.56472rem;
+      padding-top: 0.56472rem; } }
+  @media screen and (min-width: 100em) {
+    .typeset h6, .typeset .zeta {
+      font-size: 1.22222rem;
+      margin-bottom: -0.54779rem;
+      padding-top: 0.54779rem; } }
 .typeset ul, .typeset ol {
-  margin-bottom: calc(2rem - 10.52px);
-  padding-top: 10.52px; }
+  margin-bottom: 1.45332rem;
+  padding-top: 0.54668rem; }
+  @media screen and (min-width: 40em) {
+    .typeset ul, .typeset ol {
+      margin-bottom: 1.41285rem;
+      padding-top: 0.58715rem; } }
+  @media screen and (min-width: 50em) {
+    .typeset ul, .typeset ol {
+      margin-bottom: 1.40799rem;
+      padding-top: 0.59201rem; } }
+  @media screen and (min-width: 64em) {
+    .typeset ul, .typeset ol {
+      margin-bottom: 1.39999rem;
+      padding-top: 0.60001rem; } }
+  @media screen and (min-width: 100em) {
+    .typeset ul, .typeset ol {
+      margin-bottom: 1.41555rem;
+      padding-top: 0.58445rem; } }
   .typeset ul li, .typeset ol li {
     -webkit-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
     -moz-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
@@ -228,6 +321,8 @@ a {
   font-style: italic; }
 .typeset small, .typeset .caption {
   font-family: "ratio", Helvetica, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
   font-size: 1.06667rem; }
   @media screen and (min-width: 40em) {
     .typeset small, .typeset .caption {
@@ -243,8 +338,24 @@ a {
       font-size: 0.86667rem; } }
 .typeset .caption {
   color: #7e7e7e;
-  padding-top: 12.56px;
-  margin-bottom: calc(2rem - 12.56px); }
+  margin-bottom: 1.39466rem;
+  padding-top: 0.60534rem; }
+  @media screen and (min-width: 40em) {
+    .typeset .caption {
+      margin-bottom: 1.35942rem;
+      padding-top: 0.64058rem; } }
+  @media screen and (min-width: 50em) {
+    .typeset .caption {
+      margin-bottom: 1.35519rem;
+      padding-top: 0.64481rem; } }
+  @media screen and (min-width: 64em) {
+    .typeset .caption {
+      margin-bottom: 1.32646rem;
+      padding-top: 0.67354rem; } }
+  @media screen and (min-width: 100em) {
+    .typeset .caption {
+      margin-bottom: 1.32066rem;
+      padding-top: 0.67934rem; } }
 .typeset h1 + .caption, .typeset .alpha + .caption, .typeset h2 + .caption, .typeset .beta + .caption, .typeset h3 + .caption, .typeset .gamma + .caption {
   margin-top: -1rem; }
 .typeset blockquote p {
