--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -599,12 +599,17 @@ img {
   @media screen and (min-width: 100em) {
     .main-nav li {
       font-size: 0.88889rem; } }
-  .main-nav li a {
+  .main-nav li a, .main-nav li span {
     display: block;
     padding: 10px 3%;
     color: #FFF;
-    border-bottom: 0.1rem solid white; }
-    .main-nav li a:hover, .main-nav li a:active, .main-nav li a:focus {
+    border-bottom: 0.1rem solid white;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; }
+    .main-nav li a:hover, .main-nav li a:active, .main-nav li a:focus, .main-nav li span:hover, .main-nav li span:active, .main-nav li span:focus {
       background-color: #f3bdc1;
       color: #494949; }
   @media screen and (min-width: 40em) {
@@ -613,12 +618,12 @@ img {
       width: auto;
       margin-right: 2rem;
       padding-top: 7px; }
-      .main-nav li a {
+      .main-nav li a, .main-nav li span {
         color: white;
         border: 0;
         display: inline;
         padding: 0; }
-        .main-nav li a:hover, .main-nav li a:active, .main-nav li a:focus {
+        .main-nav li a:hover, .main-nav li a:active, .main-nav li a:focus, .main-nav li span:hover, .main-nav li span:active, .main-nav li span:focus {
           background-color: transparent;
           color: #d52836; } }
 
