--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -4,22 +4,26 @@
 .global-header {
   background-color: $backgroundColour;
   font-size: 0;
+
   @include breakpoint(break-1) {
     background-color: $headBackgroundColour;
   }
-}
 
-.global-header__logo {
-  background-image: url(../img/logo.png);
-  background-size: cover;
-  color: transparent;
-  display: inline-block;
-  font: 0/0 a;
-  height: 60px;
-  width: 165px;
-  margin-left: 3%;
-  vertical-align: middle;
-  @include breakpoint(break-1) {
-    margin-left: 0;
+  &__logo {
+    background-image: url(../img/logo.png);
+    background-size: cover;
+    color: transparent;
+    display: inline-block;
+    font: 0/0 a;
+    height: 60px;
+    width: 165px;
+    margin-left: 3%;
+    vertical-align: middle;
+
+    @include breakpoint(break-1) {
+      margin-left: 0;
+    }
+
   }
+
 }
